fixed background on mobile

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -25,6 +25,7 @@ body {
     $primary-minus-1 100%
   );
   background-repeat: no-repeat;
+  background-attachment: fixed;
   position: relative;
   height: 100%;
   width: 100%;
